<resources>
    <string name="app_name">FEFU Tracker - FD Edition</string>
    <string name="label_ohayo_sekai">Good Morning, World!</string>

    <string name="welcomelabel0">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="welcomelabel1">Созданный студентами</string>
    <string name="welcomelabel2">Уже есть аккаунт?</string>

    <string name="reglabel0">Регистрация</string>
    <string name="reglabel1">Логин</string>
    <string name="reglabel2">Пароль</string>
    <string name="reglabel3">Повторите пароль</string>
    <string name="reglabel4">Имя или никнейм</string>
    <string name="reglabel5">Пол</string>

    <string name="reggen1">Мужской</string>
    <string name="reggen2">Женский</string>
    <string name="reggen3">Другое</string>

    <string name="regbtn">Зарегистрироваться</string>

    <string name="regfine1">Нажимая на кнопку, вы соглашаетесь с </string>
    <string name="regfine2">политикой конфиденциальности</string>
    <string name="regfine3"> и обработки персональных данных, а также принимаете </string>
    <string name="regfine4">пользовательское соглашение</string>
    <string name="regfinefull">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>

    <string name="loglabel0">Вход</string>
    <string name="logbtn">Войти</string>

    <string name="activUpTab1">Моя</string>
    <string name="activUpTab2">Пользователей</string>

    <string name="activDownTab1">Активность</string>
    <string name="activDownTab2">Профиль</string>

    <string name="activblank1">Время потренить</string>
    <string name="activblank2">Нажимай на кнопку ниже и начинаем\nтрекать активность</string>

    <string name="stickerstart">Старт</string>
    <string name="stickerstop">Стоп</string>
    <string name="stickercom">Комментарий</string>

    <string name="proflabel">Профиль</string>
    <string name="profsave">Сохранить</string>
    <string name="proflog">Логин</string>
    <string name="profpass">Пароль</string>
    <string name="profchange">Изменить пароль</string>
    <string name="profout">Выйти</string>

    <string name="passlabel">Изменить пароль</string>
    <string name="passold">Старый пароль</string>
    <string name="passnew">Новый пароль</string>
    <string name="passagain">Повторите пароль</string>
    <string name="passaccept">Принять</string>

    <string name="trinitystartlabel">Погнали? :)</string>
    <string name="trinitystartbtn">Начать</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>