<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_registration_bicycles" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/welcomelabel0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="16sp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:fontFamily="sans-serif"
            android:text="@string/welcomelabel1"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="16sp"
            android:backgroundTint="#4B09F3"
            android:fontFamily="sans-serif-medium"
            android:text="@string/regbtn"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/welcomelabel2"
            android:textAlignment="center"
            android:textColor="#4B09F3"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>