<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MineStickerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/osticker_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/detail_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="10sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:text="TextView"
                android:textColor="#4B09F3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/detail_dist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_ago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:text="TextView"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/detail_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/stickerstart"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/detail_start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:text="|"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/stickerstop"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/detail_finish"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:allowUndo="false"
                    android:background="#CDCFD4"
                    android:clickable="false"
                    android:editable="false"
                    android:freezesText="true"
                    android:hint="@string/stickercom"
                    android:longClickable="false" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>